--- a/index.html
+++ b/index.html
@@ -56,10 +56,9 @@
      </script>
 
     <script src="node_modules/jquery/dist/jquery.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="node_modules/handlebars/dist/handlebars.js"></script>
     <script src="src/jquery.BasicPagination.js"></script>
-
 
     <script type="text/javascript">
         $(document).ready(function () {
