--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
                 },
                 paginationId: 'roles-table',
                 templateId: 'roles-table-template',
+                paginationTemplateId: 'roles-pages-template',
                 pagesContainerClass: 'roles-pages-container'
             }).on("observerActions", function (event, pagination) {
                 var trTable = pagination.find('tbody').find('tr');
